# search5

./: AGENTS.md  Cargo.toml  README.md  index.sh  pub.sh  run.sh  test.sh
_doc/: ccc_code_skill.md  v0.1.md  v0.2.md  v1.0-sql5.md
data/: 01_programming.html  02_rust.html  03_web.html  04_database.html  05_ai.html  06_cloud.html  07_security.html  08_algorithm.html  09_network.html  10_mobile.html  11_testing.html  12_devops.html  13_blockchain.html  14_data_science.html  15_linux.html  16_git.html  17_api.html  18_microservice.html  19_frontend.html  20_backend.html  index.nfts  index.nfts.documents.json  index.nfts.wal
src/: main.rs
src/api/: mod.rs  routes.rs
src/indexer/: indexer.rs  mod.rs
src/parser/: html.rs  mod.rs
src/search/: mod.rs
src/ui/: handlers.rs  mod.rs
src/ui/templates/: index.html  search.html
