[package]
name = "search5"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
nanofts = "0.7"
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tempfile = "3"

[dev-dependencies]
tokio-test = "0.4"