[package]
name = "search5"
version = "0.3.0"
edition = "2024"
description = "search5 - Local File Search Engine"
license = "MIT"

[package.metadata]
exclude = [".DS_Store"]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
nanofts = "0.7"
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
tempfile = "3"
minijinja = "2"

[dev-dependencies]
tokio-test = "0.4"